index page - new read links design

--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -18,23 +18,24 @@
 
 <div class="nav__tutorials-cont">
     <nav class="nav_index">
-        <span>Read boi</span>
-        <div class="start_reading_links link_group">
-            <a class="link_cont" href="/Read/Story">
-                <i class="bi bi-book-fill"></i>
-                <span>Story</span>
+        <div class="start_reading_links">
+            <a class="read_link" href="/Read/Novel">
+                <i class="bi bi-book"></i><span>Novel</span>
             </a>
-            <a class="link_cont" href="/Read/Fanfiction">
-                <i class="bi bi-book-half"></i>
-                <span>Fanfiction</span>
+            <a class="read_link" href="/Read/Fanfiction">
+                <i class="bi bi-book"></i><span>Fanfiction</span>
             </a>
-            <a class="link_cont" href="/Read/Scenario">
-                <i class="bi bi-book"></i>
-                <span>Scenario</span>
+            <!--<a class="read_link" href="/Read/Fairytale">
+                <i class="bi bi-book"></i><span>Fairytale</span>
+            </a> A novel with Kids rating category instead maybe?-->
+            <a class="read_link" href="/Read/Graphical">
+                <i class="bi bi-book"></i><span>Graphical</span>
             </a>
-            <a class="link_cont" href="/Read/Plot">
-                <i class="bi bi-journal-text"></i>
-                <span>Plot</span>
+            <a class="read_link" href="/Read/Script">
+                <i class="bi bi-book"></i><span>Script</span>
+            </a>
+            <a class="read_link" href="/Read/Plot">
+                <i class="bi bi-book"></i><span>Plot</span>
             </a>
         </div>
         <div class="community_links link_group">
