--- a/OmneFictio.Web/wwwroot/css/index.scss
+++ b/OmneFictio.Web/wwwroot/css/index.scss
@@ -16,6 +16,7 @@ nav.nav_index {
     display: flex;
     flex-direction: column;
     width: 100%;
+    padding-top: 16px;
 
     >span {
         margin: 10px 0 4px;
@@ -67,6 +68,46 @@ nav.nav_index {
 
             i.bi-person {
                 font-size: 2.3rem;
+            }
+        }
+    }
+
+    .start_reading_links {
+        width: 100%;
+        gap: 8px;
+        padding: 0 10px 14px;
+        margin-bottom: 14px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        border-bottom: 1px solid var(--background-color2);
+
+        .read_link {
+            padding: 10px 10px 10px 14px;
+            border-radius: 6px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            box-shadow: -3px 3px 4px -5px rgb(0 0 0 / 50%);
+            -moz-box-shadow: -3px 3px 4px -5px rgb(0 0 0 / 50%);
+            -webkit-box-shadow: -3px 3px 4px -5px rgb(0 0 0 / 50%);
+            background-color: var(--cont-bgcolor1);
+
+            &:hover {
+                background-color: var(--cont-bgcolor2);
+            }
+
+            span {
+                font-size: 1.2rem;
+                height: 1.2rem;
+                font-family: 'Solitreo';
+            }
+
+            i {
+                font-size: 1.2rem;
+                height: 1.1rem;
+                display: flex;
             }
         }
     }
@@ -228,11 +269,11 @@ nav.nav_index {
             display: flex;
             gap: 8px;
             transition: all 0.1s ease-in-out;
-            background-color: var(--tcate-bgcolor);
+            background-color: var(--cont-bgcolor1);
             border: 1px solid var(--cont-bordercolor1);
 
             &:hover {
-                background-color: var(--tcate-hover);
+                background-color: var(--cont-bgcolor2);
             }
 
             .tcate-icon {
@@ -330,6 +371,7 @@ nav.nav_index {
 
     nav.nav_index {
         width: 340px;
+        padding-top: 20px;
 
         .link_group {
             padding: 10px 0 6px;
@@ -345,6 +387,16 @@ nav.nav_index {
             .link_cont {
                 //width: 24%;
                 gap: 6px;
+            }
+        }
+
+        .start_reading_links {
+            padding: unset;
+            border-bottom: unset;
+            margin-bottom: 20px;
+            flex-direction: column;
+            .read_link{
+                width: 100%;
             }
         }
     }
