--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -148,7 +148,7 @@ header .header-wrap {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  height: 5.1rem;
+  padding: 4px 10px;
 }
 
 .drawerbtn-cont {
@@ -162,6 +162,7 @@ header .header-wrap {
   font-size: 3.4rem;
   text-shadow: 0px 0px 6px var(--text-boxshadow1);
   cursor: pointer;
+  display: flex;
 }
 .drawerbtn-cont i:hover {
   font-size: 3.2rem;
@@ -506,7 +507,7 @@ header .header-wrap {
 
 .searchbar-cont {
   flex-grow: 1;
-  padding: 4px 26px 0;
+  padding: 0 26px 0;
   display: none;
   align-items: center;
   justify-content: center;
@@ -1105,6 +1106,12 @@ footer .copyright span {
   }
   body {
     background-color: var(--background-color2);
+  }
+  header .header-wrap {
+    padding: 10px;
+  }
+  header .searchbar-cont {
+    padding-top: 4px;
   }
   .account-cont {
     display: flex;
