--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -146,7 +146,8 @@ header {
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        height: 5.1rem;
+        padding: 4px 10px;
+        //height: 5.1rem;
     }
 }
 
@@ -161,6 +162,7 @@ header {
         font-size: 3.4rem;
         text-shadow: 0px 0px 6px var(--text-boxshadow1);
         cursor: pointer;
+        display: flex;
 
         &:hover {
             font-size: 3.2rem;
@@ -558,7 +560,7 @@ header {
 
 .searchbar-cont {
     flex-grow: 1;
-    padding: 4px 26px 0;
+    padding: 0 26px 0;
     display: none;
     align-items: center;
     justify-content: center;
@@ -1253,6 +1255,14 @@ footer {
 
     body {
         background-color: var(--background-color2);
+    }
+    header{
+        .header-wrap{
+            padding: 10px;
+        }
+        .searchbar-cont{
+            padding-top: 4px;
+        }
     }
 
     .account-cont {
