--- a/OmneFictio.Web/wwwroot/css/theme.css
+++ b/OmneFictio.Web/wwwroot/css/theme.css
@@ -32,8 +32,7 @@
   --navlink-others-color-hover: #5f5a66;
   --index-post-bg-color: #313131;
   --cont-bgcolor1: #313131;
-  --tcate-bgcolor: #313131;
-  --tcate-hover: #454545;
+  --cont-bgcolor2: #454545;
   --register-form-color: #404040;
   --register-input-color: #1d1d1d;
   --publish-form-color: #404040;
@@ -103,8 +102,7 @@
   --navlink-others-color-hover: #816f96;
   --index-post-bg-color: #ffffff;
   --cont-bgcolor1: #f9f9f9;
-  --tcate-bgcolor: #f9f9f9;
-  --tcate-hover: #ffffff;
+  --cont-bgcolor2: #ffffff;
   --register-form-color: #f0f0f0;
   --register-input-color: #dcdcdc;
   --publish-form-color: #f0f0f0;
