--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -43,8 +43,7 @@
     //index
     --index-post-bg-color: #313131;
     --cont-bgcolor1: #313131;
-    --tcate-bgcolor: #313131;
-    --tcate-hover: #454545;
+    --cont-bgcolor2: #454545;
     //read
     //register
     --register-form-color: #404040;
@@ -134,8 +133,7 @@
     //index
     --index-post-bg-color: #ffffff;
     --cont-bgcolor1: #f9f9f9;
-    --tcate-bgcolor: #f9f9f9;
-    --tcate-hover: #ffffff;
+    --cont-bgcolor2: #ffffff;
     //read
     //register
     --register-form-color: #f0f0f0;
